{
  "version": 4,
  "terraform_version": "1.0.6",
  "serial": 37,
  "lineage": "be430507-3371-e68b-939e-5ec8b413cb6e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "my_nat1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0a72d2123ed99bf9f",
            "domain": "vpc",
            "id": "eipalloc-070c720469a5064a8",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0f9608d121773c35a",
            "private_dns": "ip-192-168-1-201.ec2.internal",
            "private_ip": "192.168.1.201",
            "public_dns": "ec2-35-169-212-150.compute-1.amazonaws.com",
            "public_ip": "35.169.212.150",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.my_ig",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "my_nat2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-07604ffef634619e5",
            "domain": "vpc",
            "id": "eipalloc-019e93f0eb1a17a0f",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0fbd6060fdab52645",
            "private_dns": "ip-192-168-91-63.ec2.internal",
            "private_ip": "192.168.91.63",
            "public_dns": "ec2-18-205-69-141.compute-1.amazonaws.com",
            "public_ip": "18.205.69.141",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.my_ig",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:180386263025:internet-gateway/igw-098bdc990f3c288c6",
            "id": "igw-098bdc990f3c288c6",
            "owner_id": "180386263025",
            "tags": {
              "Name": "my_vpc"
            },
            "tags_all": {
              "Name": "my_vpc"
            },
            "vpc_id": "vpc-05a024d4995126375"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "my_ng_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-070c720469a5064a8",
            "connectivity_type": "public",
            "id": "nat-06aac26d97451e858",
            "network_interface_id": "eni-0f9608d121773c35a",
            "private_ip": "192.168.1.201",
            "public_ip": "35.169.212.150",
            "subnet_id": "subnet-0cdda62a72bb4de5a",
            "tags": {
              "Name": "NAT 1"
            },
            "tags_all": {
              "Name": "NAT 1"
            }
          },
          "dependencies": [
            "aws_eip.my_nat1",
            "aws_internet_gateway.my_ig",
            "aws_subnet.my_route_public1",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "my_ng_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-019e93f0eb1a17a0f",
            "connectivity_type": "public",
            "id": "nat-0508afb8e62f3ebcd",
            "network_interface_id": "eni-0fbd6060fdab52645",
            "private_ip": "192.168.91.63",
            "public_ip": "18.205.69.141",
            "subnet_id": "subnet-09e5fc1797a29bc26",
            "tags": {
              "Name": "NAT 2"
            },
            "tags_all": {
              "Name": "NAT 2"
            }
          },
          "dependencies": [
            "aws_eip.my_nat2",
            "aws_internet_gateway.my_ig",
            "aws_subnet.my_route_public2",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_route_private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:180386263025:route-table/rtb-08d68eb2c343672f5",
            "id": "rtb-08d68eb2c343672f5",
            "owner_id": "180386263025",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06aac26d97451e858",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my_route_private1"
            },
            "tags_all": {
              "Name": "my_route_private1"
            },
            "vpc_id": "vpc-05a024d4995126375"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.my_nat1",
            "aws_internet_gateway.my_ig",
            "aws_nat_gateway.my_ng_1",
            "aws_subnet.my_route_public1",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_route_private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:180386263025:route-table/rtb-0704a69db40e840c8",
            "id": "rtb-0704a69db40e840c8",
            "owner_id": "180386263025",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0508afb8e62f3ebcd",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my_route_private_2"
            },
            "tags_all": {
              "Name": "my_route_private_2"
            },
            "vpc_id": "vpc-05a024d4995126375"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.my_nat2",
            "aws_internet_gateway.my_ig",
            "aws_nat_gateway.my_ng_2",
            "aws_subnet.my_route_public2",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_route_table_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:180386263025:route-table/rtb-006b3b459a066abd9",
            "id": "rtb-006b3b459a066abd9",
            "owner_id": "180386263025",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-098bdc990f3c288c6",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "vpc_id": "vpc-05a024d4995126375"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my_ig",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my_route_private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ef232903a286d843",
            "route_table_id": "rtb-08d68eb2c343672f5",
            "subnet_id": "subnet-01298f9c95c648d7b"
          },
          "dependencies": [
            "aws_route_table.my_route_private1",
            "aws_subnet.my_route_private1",
            "aws_subnet.my_route_public1",
            "aws_vpc.my_vpc",
            "aws_eip.my_nat1",
            "aws_internet_gateway.my_ig",
            "aws_nat_gateway.my_ng_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my_route_private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05b0b028f5be8fe67",
            "route_table_id": "rtb-0704a69db40e840c8",
            "subnet_id": "subnet-0a47ab109f31660d9"
          },
          "dependencies": [
            "aws_subnet.my_route_private2",
            "aws_subnet.my_route_public2",
            "aws_vpc.my_vpc",
            "aws_eip.my_nat2",
            "aws_internet_gateway.my_ig",
            "aws_nat_gateway.my_ng_2",
            "aws_route_table.my_route_private_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my_route_public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00ed3e1ed5e82c529",
            "route_table_id": "rtb-006b3b459a066abd9",
            "subnet_id": "subnet-0cdda62a72bb4de5a"
          },
          "dependencies": [
            "aws_internet_gateway.my_ig",
            "aws_route_table.my_route_table_public",
            "aws_subnet.my_route_public1",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my_route_public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fa6b97cffdec4b36",
            "route_table_id": "rtb-006b3b459a066abd9",
            "subnet_id": "subnet-09e5fc1797a29bc26"
          },
          "dependencies": [
            "aws_internet_gateway.my_ig",
            "aws_route_table.my_route_table_public",
            "aws_subnet.my_route_public2",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_route_private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:180386263025:subnet/subnet-01298f9c95c648d7b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.128.0/18",
            "id": "subnet-01298f9c95c648d7b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "180386263025",
            "tags": {
              "Name": "private-us-east-1a",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "private-us-east-1a",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-05a024d4995126375"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_route_private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:180386263025:subnet/subnet-0a47ab109f31660d9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.192.0/18",
            "id": "subnet-0a47ab109f31660d9",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "180386263025",
            "tags": {
              "Name": "private-us-east-1b",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "private-us-east-1b",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-05a024d4995126375"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_route_public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:180386263025:subnet/subnet-0cdda62a72bb4de5a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.0.0/18",
            "id": "subnet-0cdda62a72bb4de5a",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "180386263025",
            "tags": {
              "Name": "public-us-east-1a",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public-us-east-1a",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-05a024d4995126375"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_route_public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:180386263025:subnet/subnet-09e5fc1797a29bc26",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.64.0/18",
            "id": "subnet-09e5fc1797a29bc26",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "180386263025",
            "tags": {
              "Name": "public-us-east-1b",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public-us-east-1b",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-05a024d4995126375"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:180386263025:vpc/vpc-05a024d4995126375",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0d50a5d21abd51439",
            "default_route_table_id": "rtb-0935f767903ea22aa",
            "default_security_group_id": "sg-040bdfaa5eefcede6",
            "dhcp_options_id": "dopt-09d3ea506a7b205b0",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-05a024d4995126375",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0935f767903ea22aa",
            "owner_id": "180386263025",
            "tags": {
              "Name": "my_vpc"
            },
            "tags_all": {
              "Name": "my_vpc"
            }
          }
        }
      ]
    }
  ]
}